--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "description": "A GitHub bot to label PRs automatically based on title and body against list of defined labels.",
-  "author": "João Carmo <kingjoao@gmail.com>",
-  "license": "ISC",
+  "author": "Joao Carmo",
+  "license": "MIT",
   "homepage": "https://github.com/joaocarmo/pr-labeler",
   "keywords": [
     "probot",
@@ -13,22 +13,33 @@
   ],
   "scripts": {
     "build": "tsc",
+    "lint": "eslint .",
+    "pretty": "prettier --write .",
     "start": "probot run ./lib/index.js",
-    "test": "jest"
-  },
-  "dependencies": {
-    "probot": "^11.0.1"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.19",
-    "jest": "^26.6.3",
-    "nock": "^13.0.5",
-    "smee-client": "^1.2.2",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "test": "jest",
+    "typings": "tsc --noEmit"
   },
   "engines": {
     "node": ">= 10.13.0"
+  },
+  "dependencies": {
+    "probot": "^12.1.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.4.0",
+    "jest": "^27.1.1",
+    "nock": "^13.0.5",
+    "prettier": "^2.4.0",
+    "smee-client": "^1.2.2",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.1.3"
   }
 }
