Adds support for title and always replace mode

--- a/test/fixtures/mock-config.yml
+++ b/test/fixtures/mock-config.yml
@@ -1,3 +1,4 @@
+alwaysReplace: false
 caseSensitive: true
 customLabels:
   - text: 'custom-text-1'
@@ -6,3 +7,5 @@ customLabels:
     label: 'custom-label-2'
   - text: '#feature'
     label: 'feature'
+searchBody: true
+searchTitle: true
