--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "probot",
     "tags"
   ],
+  "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
+    "install": "tsc",
     "lint": "eslint .",
     "pretty": "prettier --write .",
     "start": "probot run ./lib/index.js",
@@ -27,7 +29,8 @@
     "node": ">= 10.13.0"
   },
   "dependencies": {
-    "probot": "^12.1.1"
+    "probot": "^12.1.1",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
@@ -44,7 +47,6 @@
     "nock-knock": "^2.0.0",
     "prettier": "^2.4.0",
     "smee-client": "^1.2.2",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.1.3"
+    "ts-jest": "^27.0.5"
   }
 }
