Updated dependencies and added tests

--- a/test/fixtures/mock-config.yml
+++ b/test/fixtures/mock-config.yml
@@ -1,11 +1,9 @@
 alwaysReplace: false
 caseSensitive: true
 customLabels:
-  - text: 'custom-text-1'
-    label: 'custom-label-1'
-  - text: 'custom-text-2'
-    label: 'custom-label-2'
   - text: '#feature'
     label: 'feature'
+  - text: 'WIP: '
+    label: 'wip'
 searchBody: true
 searchTitle: true
