--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 # This workflow is automatically triggered on release/tag and will bump the
 # version in the package.json
 #
-name: Release Version
+name: Release
 
 on:
   release:
