--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
+        with:
+          token: '${{ secrets.GH_PAT }}'
+          ref: 'main'
 
       - name: Create GitHub deployment
         uses: chrnorm/deployment-action@releases/v1
