--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jest": "^24.4.0",
+    "express": "^4.17.1",
     "jest": "^27.2.0",
     "nock": "^13.0.5",
     "nock-knock": "^2.0.0",
