--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf coverage/ lib/",
     "install": "tsc",
     "lint": "eslint .",
     "pretty": "prettier --write .",
@@ -29,25 +30,26 @@
     "node": ">= 10.13.0"
   },
   "dependencies": {
+    "escape-string-regexp": "^5.0.0",
     "probot": "^12.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.9.6",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "eslint": "^7.32.0",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^24.4.2",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.3",
     "express": "^4.17.1",
-    "jest": "^27.2.1",
-    "nock": "^13.0.5",
+    "jest": "^27.3.1",
+    "nock": "^13.1.4",
     "nock-knock": "^2.0.0",
     "prettier": "^2.4.1",
     "smee-client": "^1.2.2",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "^27.0.7"
   }
 }
