--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,13 @@ jobs:
           token: '${{ secrets.GH_PAT }}'
           ref: 'main'
       - name: Use Node.js v14 (LTS)
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '14'
+          cache: 'yarn'
       - name: Get release
         id: get_release
-        uses: bruceadams/get-release@v1.2.2
+        uses: bruceadams/get-release@v1.2.3
         env:
           GITHUB_TOKEN: '${{ secrets.GH_PAT }}'
 
