--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^4.4.4"
   },
   "devDependencies": {
+    "@octokit/types": "^13.6.2",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
@@ -51,5 +52,6 @@
     "prettier": "^2.4.1",
     "smee-client": "^1.2.2",
     "ts-jest": "^27.0.7"
-  }
+  },
+  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
