--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,3 @@
-# This workflow is automatically triggered on release/tag and will bump the
-# version in the package.json
-#
 name: Release
 
 on:
@@ -15,11 +12,18 @@ jobs:
         with:
           token: '${{ secrets.GH_PAT }}'
           ref: 'main'
+
+      - name: Enable corepack
+        run: |
+          corepack enable pnpm
+          corepack use pnpm
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'yarn'
+          cache: 'pnpm'
+ 
       - name: Get release
         id: get_release
         uses: bruceadams/get-release@v1.3.2
@@ -31,11 +35,13 @@ jobs:
           git config --local user.name "${{ secrets.GIT_AUTHOR_NAME }}"
           git config --local user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
           npm version --no-commit-hooks --no-git-tag-version ${{ steps.get_release.outputs.tag_name }}
+
       - name: Commit and push the version change
         run: |
           git add .
           git commit -m "Release ${{ steps.get_release.outputs.tag_name }}" --no-gpg-sign --no-verify --signoff
           git push
+
       - name: Trigger the Deploy Action
         uses: benc-uk/workflow-dispatch@v1
         with:
