--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pr-labeler",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "private": true,
   "description": "A GitHub bot to label PRs automatically based on title and body against list of defined labels.",
   "author": "Joao Carmo",
@@ -53,5 +53,5 @@
     "smee-client": "^1.2.2",
     "ts-jest": "^27.0.7"
   },
-  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
+  "packageManager": "pnpm@10.0.0-rc.2+sha512.b6e59b96f90ca92449ac2f6dca9b430880448fc97d21f0fa9200e3d5ddb5289ad535255400554f7f3486e2d60058492161aaa9b58828e81f50c096718be9d156"
 }
