--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
   "dependencies": {
     "escape-string-regexp": "^5.0.0",
     "probot": "^13.4.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@octokit/types": "^13.6.2",
+    "@tsconfig/node22": "^22.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.3",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
