--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,20 @@
 {
+  "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
     "incremental": true,
-    "target": "es5",
-    "module": "commonjs",
-    "lib": ["es2015", "es2017"],
     "allowJs": true,
     "checkJs": true,
     "declaration": true,
     "sourceMap": true,
     "outDir": "./lib",
-    "strict": true,
     "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "pretty": false,
-    "skipLibCheck": true
+    "pretty": false
   },
   "include": ["src/", "node_modules/escape-string-regexp/"],
   "compileOnSave": false
