--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^28.10.0",
     "express": "^4.21.2",
-    "jest": "^27.5.1",
-    "nock": "^13.5.6",
+    "jest": "^29.7.0",
+    "nock": "14.0.0-beta.19",
     "nock-knock": "^2.0.0",
     "prettier": "^3.4.2",
     "smee-client": "^2.0.4",
-    "ts-jest": "^27.1.5"
+    "ts-jest": "^29.2.5"
   },
   "packageManager": "pnpm@10.0.0-rc.2+sha512.b6e59b96f90ca92449ac2f6dca9b430880448fc97d21f0fa9200e3d5ddb5289ad535255400554f7f3486e2d60058492161aaa9b58828e81f50c096718be9d156"
 }
